tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.field.missing.open.bracket/reader-layout-field-missing-open-bracket.mon
;; TEST-ID: tests.codegen.reader-error.reader-layout-field-missing-open-bracket
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected '[' for layout field
;; TEST-ATOM: atom.reader.error.reader.layout.field.missing.open.bracket
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.layout.field.missing.open.bracket
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected '[' for layout field
;; TEST-READER-PATH: reader.c:5316 parser.layout
;; TEST-CODEGEN-PATH: diagnostic.parser.layout
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:5316 Expected '[' for layout field
;; TEST-USES-ATOM: atom.reader.error.reader.layout.field.missing.open.bracket
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.layout
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.field.missing.open.bracket
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.field.missing.open.bracket
;; TEST-ATOM-LEAF: atom.reader.error.reader.layout.field.missing.open.bracket
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(layout Point x)
